﻿drkns 29.01.2014 23:43:43 +0200 - build 3789

1. Во имя перфекционизма не запрашиваем информацию о кодовых страницах до тех пор, пока она не понадобится.

shmuel 29.01.2014 18:45:16 +0200 - build 3788

1. Рефакторинг в системе макросов.

zg 27.01.2014 21:37:49 +0200 - build 3787

1. 0002579: DM_GETTEXT в некоторых случаях возвращает мусор (LuaFAR)

drkns 27.01.2014 21:09:26 +0200 - build 3786

1. 0002578: Проблема выделения памяти при поиске с фильтром

zg 25.01.2014 04:09:09 +0200 - build 3785

1. 0002567: навигация по архиву после поиска
   в SetDirectoryW передавался путь со слэшем на конце.

drkns 21.01.2014 22:47:59 +0200 - build 3784

1. 0002568: Exception при попытке ввода строки в поля рассчитанные на числовые значения

w17 21.01.2014 23:14:25 +0400 - build 3783

1. M#2569: В диалоге настроек Viewer неверно работает шорткат AltM

shmuel 21.01.2014 19:26:55 +0200 - build 3782

1. Рефакторинг в системе макросов.

drkns 19.01.2014 23:03:16 +0200 - build 3781

1. #0002294: Удален неиспользуемый код.

drkns 19.01.2014 21:18:14 +0200 - build 3780

1. Уточнение 3779.

drkns 19.01.2014 19:58:42 +0200 - build 3779

1. PVS & cppcheck warnings.

2. Рефакторинг.

drkns 19.01.2014 02:39:29 +0200 - build 3778

1. Рефакторинг.

shmuel 18.01.2014 20:50:43 +0200 - build 3777

1. Рефакторинг в системе макросов.

w17 17.01.2014 14:12:54 +0400 - build 3776

1. M#2557: Подверждение удаления нескольких файлов

   Добавлены 2 настройки (far:config):

   a) Interface.DelHighlightSelected -- bool, default = true
   true -- выделяем случай, когда список удаляемых объектов отличаеся от объекта под курсором.

   b) Interface.DelShowSelected -- int, default = 10
   При множественном удалении показываем имена. Не более чем заданное число,
   приведённое к диапазону 1..высота_экрана/2

   Старое поведение = (false, 1)

drkns 17.01.2014 09:50:47 +0200 - build 3775

1. Уточнение 3774.

drkns 16.01.2014 22:11:50 +0200 - build 3774

1. 0002565: Регрессия с повышением доступа и чтением папок