@@ -1,4 +1,8 @@
-﻿drkns 29.01.2014 23:43:43 +0200 - build 3789
+﻿drkns 31.01.2014 08:42:27 +0200 - build 3790
+
+1. 0002588: При изменении каталога в диалоге и нажатии Enter переходим в прежний каталог
+
+drkns 29.01.2014 23:43:43 +0200 - build 3789
 
 1. Во имя перфекционизма не запрашиваем информацию о кодовых страницах до тех пор, пока она не понадобится.
 
